hw1 fix ALL